syntax = "proto3";
package observer;

import "gogoproto/gogo.proto";
import "pkg/chains/chains.proto";

option go_package = "github.com/zeta-chain/zetacore/x/observer/types";

enum ObservationType {
  option (gogoproto.goproto_enum_stringer) = true;
  EmptyObserverType = 0;
  InBoundTx = 1;
  OutBoundTx = 2;
  TSSKeyGen = 3;
  TSSKeySign = 4;
}

enum ObserverUpdateReason {
  option (gogoproto.goproto_enum_stringer) = true;
  Undefined = 0;
  Tombstoned = 1;
  AdminUpdate = 2;
}

message ObserverMapper {
  string index = 1;
  pkg.chains.Chain observer_chain = 2;
  repeated string observer_list = 4;
}

message ObserverSet {
  repeated string observer_list = 1;
}

message LastObserverCount {
  uint64 count = 1;
  int64 last_change_height = 2;
}
